--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -1,8 +1,7 @@
+<app-header></app-header>
 
     <div class="accueil">
-
         <h1>Notre matériel en location</h1>
-
         <div class="container">
             <div class="row g-3">
                 <div class="col-12 col-md-6">
