page-connexion/header/gestionnaire

--- a/src/app/page-gestionnaire/page-gestionnaire.component.html
+++ b/src/app/page-gestionnaire/page-gestionnaire.component.html
@@ -2,6 +2,7 @@
 
     <h1>Suivi du parc</h1>
 
+
     <div class="container">
         <div class="row g-3">
             <div class="col-12 col-md-6 col-lg-4 mb-3">
@@ -58,7 +59,7 @@
             </div>
         </div>
 
-        <button class="btnEnregistrer btn-lg px-5 " type="submit">Enregistrer une réservation</button>
+        <button class="btnEnregistrer btn-lg px-4" type="submit" href="#">Enregistrer une réservation</button>
 
         <div class="titre">
             <h1>Suivi des locations</h1>
@@ -154,6 +155,7 @@
 
 
     </div>
+    
 
 
 </div>
