Création router link et amélioration form en css

--- a/src/app/page-etudiant/page-etudiant.component.html
+++ b/src/app/page-etudiant/page-etudiant.component.html
@@ -1,23 +1,21 @@
-<app-header></app-header>
-
 <div class="pageEtudiant">
 
   <div class="container">
     <h2 class="text-center mb-5">Matériel en location</h2>
     <div class="row text-center">
       <div class="col-6">
-        <h3>Informations</h3>
         <div class="card text-start">
           <div class="card-body">
+            <h3 class="card-title text-center">Informations</h3>
             <p class="card-text">Matériel(s) en cours de location:</p>
             <p class="card-text">Matériel(s) en retard:</p>
           </div>
         </div>
       </div>
       <div class="col-6">
-        <h3>Gestion</h3>
         <div class="card text-center">
           <div class="card-body">
+            <h3 class="card-title">Gestion</h3>
             <p class="card-text">Signaler un dysfonctionnement ou une panne</p>
             <a href="#" class="btn btn-primary boutonsGestion">Signaler</a>
             <p class="card-text">Demander une prolongation d'emprunt</p>
@@ -36,35 +34,35 @@
     <h3 class="mb-3">Informations personnelles</h3>
       <div class="form-row">
         <div class="row">
-          <div class="col-md-4 mb-3">
+          <div class="col-lg-4 mb-3">
             <label for="validationDefault01">Nom*</label>
             <input type="text" class="form-control" id="validationDefault01" required>
           </div>
-          <div class="col-md-4 mb-3">
+          <div class="col-lg-4 mb-3">
             <label for="validationDefault02">Prenom*</label>
             <input type="text" class="form-control" id="validationDefault02" required>
           </div>
-          <div class="col-md-3 mb-3">
+          <div class="col-lg-3 mb-3">
             <label for="validationDefault01">Date de naissance*</label>
             <input type="date" class="form-control" id="validationDefault01" required>
           </div>
         </div>
         <div class="row">
-          <div class="col-md-4 mb-3">
+          <div class="col-lg-4 mb-3">
             <label for="validationDefault02">Adresse*</label>
             <input type="text" class="form-control" id="validationDefault02" placeholder="Numéro et nom de rue" required>
           </div>
-          <div class="col-md-3 mb-3">
+          <div class="col-lg-3 mb-3">
             <label for="validationDefault03">Ville*</label>
             <input type="text" class="form-control" id="validationDefault03" required>
           </div>
-          <div class="col-md-3 mb-3">
+          <div class="col-lg-3 mb-3">
             <label for="validationDefault05">Code postal*</label>
             <input type="text" class="form-control" id="validationDefault05" required>
           </div>
         </div>
         <div class="row">
-          <div class="col-md-3 mb-3">
+          <div class="col-lg-3 mb-3">
             <label for="validationDefaultUsername">Mail*</label>
             <div class="input-group">
               <div class="input-group-prepend">
@@ -73,7 +71,7 @@
               <input type="text" class="form-control" id="validationDefaultUsername" placeholder="exemple@gmail.com" aria-describedby="inputGroupPrepend2" required>
             </div>
           </div>
-          <div class="col-md-3 mb-3">
+          <div class="col-lg-3 mb-3">
             <label>Veuillez choisir votre statut...</label>
             <select class="form-select" aria-label="Default select example">
               <option selected></option>
@@ -86,7 +84,7 @@
 
       <h3 class="mb-3 mt-4">Informations matériel</h3>
       <div class="row">
-        <div class="col-md-3 mb-3">
+        <div class="col-lg-3 mb-3">
           <label>Sélectionnez le matériel :</label>
           <select class="form-select" aria-label="Default select example">
             <option selected></option>
@@ -96,7 +94,7 @@
             <option value="4">Casque VR</option>
           </select>
         </div>
-        <div class="col-md-3 mb-3">
+        <div class="col-lg-3 mb-3">
           <label>Sélectionnez le lieu :</label>
           <select class="form-select" aria-label="Default select example">
             <option selected></option>
@@ -104,7 +102,7 @@
             <option value="2">IFA</option>
           </select>
         </div>
-        <div class="col-md-3 mb-3">
+        <div class="col-lg-3 mb-3">
           <label>Sélectionnez le cadre d'utilisation :</label>
           <select class="form-select" aria-label="Default select example">
             <option selected></option>
@@ -119,11 +117,11 @@
       <h3 class="mb-3 mt-4">Dates de réservation</h3>
         <div class="form-row">
           <div class="row">
-            <div class="col-md-3 mb-3">
+            <div class="col-lg-3 mb-3">
               <label for="validationDefault01">Date de début d'emprunt*</label>
               <input type="date" class="form-control" id="validationDefault01" required>
             </div>
-            <div class="col-md-3 mb-3">
+            <div class="col-lg-3 mb-3">
               <label for="validationDefault02">Date fin d'emprunt*</label>
               <input type="date" class="form-control" id="validationDefault02" required>
             </div>
