--- a/src/app/page-etudiant/page-etudiant.component.scss
+++ b/src/app/page-etudiant/page-etudiant.component.scss
@@ -16,8 +16,6 @@
 
 h2{
     font-size: 35px;
-    padding-top: 200px;
-    color: white;
 }
 
 h3{
@@ -31,6 +29,14 @@ h3{
 }
 
 form{
-    color: white;
+    background-color: white;
+    margin-top: 100px;
+    padding: 30px;
+    border-radius: 30px;
 }
+
+.card{
+    margin-top: 100px;
+}
+
 
