--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,6 @@
 <!-- <app-accueil></app-accueil> -->
-<app-page-etudiant></app-page-etudiant>
+<!-- <app-page-etudiant></app-page-etudiant> -->
+
+<app-header></app-header>
+
+<router-outlet></router-outlet>
