--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -11,8 +11,8 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav ms-auto">
-            <a class="nav-link active" aria-current="page" href="#">Accueil</a>
-            <a class="nav-link" href="#">Tableau de bord</a>
+            <a class="nav-link" aria-current="page" [routerLink]="['accueil']" [routerLinkActive]="['active']">Accueil</a>
+            <a class="nav-link" [routerLink]="['page-etudiant']" [routerLinkActive]="['active']">Tableau de bord</a>
             <a class="nav-link" href="#">Contact</a>
           </div>
         </div>
