--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -13,11 +13,11 @@
           <div class="navbar-nav ms-auto">
             <a class="nav-link" aria-current="page" [routerLink]="['accueil']" [routerLinkActive]="['active']">Accueil</a>
             <a class="nav-link" [routerLink]="['page-etudiant']" [routerLinkActive]="['active']">Tableau de bord</a>
-            <a class="nav-link" href="#">Contact</a>
+            <a class="nav-link" [routerLink]="['contact']" [routerLinkActive]="['active']">Contact</a>
           </div>
         </div>
         <div class="d-flex justify-content-end">
-          <button type="button" class="btn seConnecter btn-warning">Se connecter</button>
+          <button type="button" class="btn seConnecter btn-warning" [routerLink]="['connexion']">Se connecter</button>
         </div>
       </div>
     </nav> 
