--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,7 +1,7 @@
 <div class="header">
     <nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand">
           <img [src]="cheminLogo" alt="Logo du site" width="100" height="100"/>
           <span class="titreLogo">Loc'MNS</span>
         </a>
