--- a/src/app/accueil/accueil.component.scss
+++ b/src/app/accueil/accueil.component.scss
@@ -4,8 +4,10 @@
 }
 
 h1{
+    font-size: 35px;
+    font-weight: bold;
     text-align: center;
     color: white;
-    padding-top: 200px;
-    padding-bottom: 100px;
+    padding-top: 150px;
+    padding-bottom: 50px;
 }
