Connexion border-radius sur le bouton se connecter

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -17,7 +17,7 @@
           </div>
         </div>
         <div class="d-flex justify-content-end">
-          <button type="button" class="btn seConnecter btn-warning" [routerLink]="['connexion']">Se connecter</button>
+          <button type="button" class="btn seConnecter" [routerLink]="['connexion']">Se connecter</button>
         </div>
       </div>
     </nav> 
