Commentaires sur le CSS

--- a/src/app/connexion/connexion.component.html
+++ b/src/app/connexion/connexion.component.html
@@ -25,7 +25,7 @@
                   <label class="form-label" for="typePasswordX">Mot de passe</label>
                 </div>
   
-                <p class="small"><a class="text-white-50" href="#!">Créer votre compte</a></p>
+                <p class="small"><a class="text-white-50" href="#!">Obtenir un compte</a></p>
   
                 <button class="btn1 btn-outline-dark btn-lg px-4 "  type="submit">Se connecter</button>
                           
