--- a/src/app/contact/contact.component.scss
+++ b/src/app/contact/contact.component.scss
@@ -1,28 +1,40 @@
+// page Entière
 .page{
     background-color:#1F2641;
     overflow:hidden;
     text-align: center;
 }
 
+// Titre Informations/contact
+h1{
+    margin-top: 150px;
+    font-size: 35px;
+    font-weight: bold;
+}
+
+h5{
+    font-size: 20px;
+    font-weight: bold;
+}
+
+// espacement entre Information de contact(MNS/IFA) et les images au dessus
 .row{
     margin-top: 30px;
     margin-left: 200px;
     margin-bottom: 30px;
 }
 
+// Photo + map MNS
 .mns{
     margin-top: 30px;
     margin-left: 30px;
 }
 
+// Photo + map IFA
 .ifa{
     margin-top: 30px;
     margin-left: 30px;
 }
 
-h1{
-    margin-top: 150px;
-    font-size: 35px;
-    font-weight: bold;
-}
+
 
