Réduit la taille des cartes (Accueil) responsive à voir

--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -1,6 +1,6 @@
 <div class="accueil">
     <h1>Notre matériel en location</h1>
-    <div class="container">
+    <div class="container" style="width: 50rem;">
         <div class="row g-3">
             <div class="col-12 col-md-6">
                 <div class="card card-first">
@@ -26,6 +26,8 @@
                             <li>Modèle: Oculus Quest 2</li>
                             <li>Connectivité: HDMI, USB 2.0, USB 3.0</li>
                             <li>Ecran: Oled</li>
+                            <br>
+                            <br>
                         </ul>
                     </div>
                 </div>
@@ -48,6 +50,7 @@
             </div>
             <div class="col-12 col-md-6">
                 <div class="card">
+                    <div class="cardProjecteur">
                     <img [src]="cheminProjecteur" alt="Photo du vidéo projecteur" class="card-img-top"/>
                     <div class="card-body">
                         <h2 class="card-title">Vidéo projecteur</h2>
@@ -56,6 +59,7 @@
                             <li>Connectivité: VGA, USB, Ethernet, HDMI</li>
                             <li>Résolution: 1280 * 800</li>
                         </ul>
+                    </div>
                     </div>
                 </div>
             </div>
