réduction carte acccueil + page contact responsive

--- a/src/app/accueil/accueil.component.html
+++ b/src/app/accueil/accueil.component.html
@@ -1,8 +1,8 @@
 <div class="accueil">
         <h1>Notre matériel en location</h1>
         <div class="container">
-            <div class="row g-3">
-                <div class="col-12 col-md-6">
+            <div class="row g-3 d-flex justify-content-center">
+                <div class="col-12 col-md-5">
                     <div class="card card-first">
                         <img [src]="cheminPhotoOrdi" alt="Photo de l'ordinateur" class="card-img-top"/>
                         <div class="card-body">
@@ -17,8 +17,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6">
-                    <div class="card">
+                <div class="col-12 col-md-5">
+                    <div class="card pb-5">
                         <img [src]="cheminCasqueVR" alt="Photo du casque VR" class="card-img-top"/>
                         <div class="card-body">
                             <h2 class="card-title">Casque VR</h2>
@@ -32,8 +32,8 @@
                 </div>
             </div>
         
-            <div class="row g-3">
-                <div class="col-12 col-md-6 mt-5">
+            <div class="row g-3 d-flex justify-content-center mt-4">
+                <div class="col-12 col-md-5">
                     <div class="card card-first">
                         <img [src]="cheminWebcam" alt="Photo de la webcam" class="card-img-top"/>
                         <div class="card-body">
@@ -46,7 +46,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-12 col-md-6">
+                <div class="col-12 col-md-5">
                     <div class="card">
                         <img [src]="cheminProjecteur" alt="Photo du vidéo projecteur" class="card-img-top"/>
                         <div class="card-body">
