--- a/src/app/contact/contact.component.html
+++ b/src/app/contact/contact.component.html
@@ -2,14 +2,14 @@
 
 <h1 class="text-white"> Informations/Contact </h1>
 
-<img class="img-fluid mns" [src]="contactMns" alt="photo MNS" width="500px"/>
-<img class="img-fluid mns" [src]="contactMapMns" alt="Adresse map MNS" width="600px"/>
-<img class="img-fluid ifa" [src]="contactIfa" alt="photo ifa" width="500px"/>
-<img class="img-fluid ifa" [src]="contactMapIfa" alt="Adresse map IFA" width="600px">
+<img class="img-fluid mns" [src]="contactMns" alt="photo MNS" width="800px"/>
+<img class="img-fluid mns" [src]="contactMapMns" alt="Adresse map MNS" width="800px"/>
+<img class="img-fluid ifa photoIfa" [src]="contactIfa" alt="photo ifa" width="800px"/>
+<img class="img-fluid ifa" [src]="contactMapIfa" alt="Adresse map IFA" width="800px">
 
 <div class="container">
-    <div class="row g-3">
-        <div class="col-12 col-md-6">
+    <div class="row g-3 d-flex justify-content-center">
+        <div class="col-12 col-md-4">
         <div class="card card-first mb-5">
             <div class="card-body">
             <h5 class="card-title text-center">Information de contact MNS</h5>
@@ -18,8 +18,8 @@
             </div>
         </div>
         </div>
-        <div class="col-12 col-md-6">
-            <div class="card">
+        <div class="col-12 col-md-4">
+            <div class="card pb-5">
                 <div class="card-body">
                     <h5 class="card-title text-center">Information de contact IFA </h5>
                     <img class="card-img-top" [src]="contactLogoIfa" alt="Adresse map IFA" width="350"/>
