--- a/src/app/connexion/connexion.component.scss
+++ b/src/app/connexion/connexion.component.scss
@@ -1,23 +1,43 @@
 .gradient-custom {
-    /* fallback for old browsers */
-    background: #6a11cb;
-    
-    /* Chrome 10-25, Safari 5.1-6 */
-    background: -webkit-linear-gradient(to right, rgba(106, 17, 203, 1), rgba(31,38,65));
-    
-    /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    background: linear-gradient(to right, rgba(31,38,65), rgba(37, 117, 252, 1))
+  /* fallback for old browsers */
+  background: #6a11cb;
+  
+  /* Chrome 10-25, Safari 5.1-6 */
+  background: -webkit-linear-gradient(to right, rgba(106, 17, 203, 1), rgba(31,38,65));
+  
+  /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: linear-gradient(to right, rgba(31,38,65), rgba(37, 117, 252, 1))
+  }
+
+.scroller {
+      width: 300px;
+      height: 100px;
+      overflow-y: scroll;
+      scrollbar-color: rebeccapurple green;
+      scrollbar-width: thin;
     }
 
- 
-
 .btn1{
-  background-color:#C44C21;
-  border-radius: 40px;
-  font-weight: bold;
-}
+background-color:#C44C21;
+border-radius: 20px;
+width: 300px
 
+}
 
 .container{
   margin-top: 100px;
 }
+
+mat-form-field{
+height: 50px;
+margin-top: 20px;
+margin-bottom: 50px;
+background-color: white;
+border-radius: 10px;
+}
+
+mat-form-field input{
+color: black;
+}
+
+
