création pop up dysfonctionnement + controle champs requis

--- a/src/app/page-etudiant/page-etudiant.component.html
+++ b/src/app/page-etudiant/page-etudiant.component.html
@@ -16,8 +16,9 @@
         <div class="card text-center">
           <div class="card-body">
             <h3 class="card-title">Gestion</h3>
+
             <p class="card-text">Signaler un dysfonctionnement ou une panne</p>
-            <a href="#" class="btn btn-primary boutonsGestion">Signaler</a>
+            <a class="btn btn-primary boutonsGestion" (click) ="openDialog()">Signaler</a>
             <p class="card-text">Demander une prolongation d'emprunt</p>
             <a href="#" class="btn btn-primary boutonsGestion">Prolonger</a>
             <p class="card-text">Faire une nouvelle demande d'emprunt</p>
