--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -3,7 +3,7 @@
       <div class="container-fluid">
         <a class="navbar-brand">
           <img [src]="cheminLogo" alt="Logo du site" width="100" height="100"/>
-          <span class="titreLogo">Loc'MNS</span>
+          <span class="titreLogo"><strong> Loc'MNS </strong></span>
         </a>
         
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
