--- a/src/app/page-etudiant/page-etudiant.component.html
+++ b/src/app/page-etudiant/page-etudiant.component.html
@@ -1,5 +1,4 @@
 <div class="pageEtudiant">
-
   <div class="container">
     <h2 class="text-center mb-5">Matériel en location</h2>
     <div class="row text-center">
@@ -22,9 +21,11 @@
             <p class="card-text">Demander une prolongation d'emprunt</p>
             <a href="#" class="btn btn-primary boutonsGestion">Prolonger</a>
             <p class="card-text">Faire une nouvelle demande d'emprunt</p>
-            <a href="#" class="btn btn-primary boutonsGestion">Nouvelle emprunt</a>
+            <a href="#" class="btn btn-primary boutonsGestion">Nouveau emprunt</a>
             <p class="card-text">Faire une demande de retour</p>
             <a href="#" class="btn btn-primary boutonsGestion">Retourner</a>
+            <p class="card-text">Faire une demande de prolongation de prêt</p>
+            <a href="#" class="btn btn-primary boutonsGestion">Prolonger</a>
           </div>
         </div>
       </div>
