--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -7,6 +7,14 @@
     margin-right: 10px;
 }
 
+.seDeconnecter{
+    background-color: red;
+    font-weight: bold;
+    font-size: 20px;
+    margin-left: 50px;
+    margin-right: 10px;
+}
+
 .nav-link{
     color: black;
     font-weight: bold;
