--- a/src/app/page-etudiant/page-etudiant.component.scss
+++ b/src/app/page-etudiant/page-etudiant.component.scss
@@ -43,7 +43,12 @@ form{
 }
 
 .iconInfo{
-    margin-right: 20px;
+    margin-right: 10px;
+}
+
+.iconClose{
+    //margin-left: auto; voir responsive
+    margin-left: 40px;
 }
 
 .messageValidation{
@@ -52,9 +57,6 @@ form{
     align-items: flex-end;
 }
 
-.iconClose{
-    margin-left: auto;
-}
 
 
 
